working on the todo list project

--- a/src/style.css
+++ b/src/style.css
@@ -12,6 +12,9 @@ body{
 .content{
     background-color: #eeeeee;
     padding: 0.5%;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
 }
 .editIcon{
     width: 35px;
