made more improvements on grid

--- a/src/style.css
+++ b/src/style.css
@@ -1,20 +1,32 @@
+*{
+    margin: 0;
+    padding: 0;
+}
 body{
     margin: 0;
     padding: 0;
     background-color: #51A08F;
     box-sizing: border-box;
 }
+
 .container{
     margin: auto;
     width: 50%;
     display: grid;
+    grid-template-columns: 1fr 3fr;
+    grid-auto-rows: minmax(30px,auto);
+    background-color: white;
 }
 .content{
     background-color: #eeeeee;
-    padding: 0.5%;
+    padding: 10px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+    transition: all 0.3s;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    row-gap: 10px;
 }
 .editIcon{
     width: 35px;
@@ -28,6 +40,7 @@ body{
     padding: 0.5%;
     text-indent: 3%;
     font-size: 60px;
+    /* border: 2px solid red; */
 }
 .editIcon,.deleteIcon{
     cursor: pointer;
@@ -41,4 +54,13 @@ body{
     background-color: rgba(0, 128, 0, 0.46);
     border-radius: 5px;
 }
-
+#titlediv{
+    font-size: 20px;
+}
+.content:hover{
+    transform: translateY(5px);
+    box-shadow: 6px 6px 7px 3px rgba(0, 0, 0, 0.128);
+}
+.header{
+    grid-column: 1/3;
+}
